Get pitch by id
